Completed the structure of the thesis

--- a/Templete tesis doctorado/memoirthesis.tex
+++ b/Templete tesis doctorado/memoirthesis.tex
@@ -1,6 +1,6 @@
 
 \RequirePackage[l2tabu]{nag}		
-\documentclass[a4paper,11pt,openbib]{memoir}
+\documentclass[a4paper,12pt,openbib]{memoir}
 \usepackage{datetime}
 \usepackage{ifpdf}
 \ifpdf
@@ -193,7 +193,13 @@
 \import{chapters/chapter02/}{chap02.tex}
 \clearemptydoublepage
 %
-\import{chapters/conclusiones/}{conclusiones.tex}
+\import{chapters/chapter03/}{chap03.tex}
+\clearemptydoublepage
+%
+\import{chapters/chapter04/}{chap04.tex}
+\clearemptydoublepage
+%
+\import{chapters/conclusiones/}{conclusions.tex}
 \clearemptydoublepage
 %
 \appendix
