Added GAP sections

--- a/Templete tesis doctorado/memoirthesis.tex
+++ b/Templete tesis doctorado/memoirthesis.tex
@@ -19,7 +19,8 @@
 \setheaderspaces{*}{2\onelineskip}{*} 
 \checkandfixthelayout
 \frenchspacing
-\usepackage{fouriernc}
+\usepackage{calrsfs}
+%\usepackage{fouriernc}
 %
 \OnehalfSpacing 
 \setsecnumdepth{subsection} 
