Added partitioning module image and completed GAP chapter info

--- a/Templete tesis doctorado/references.bib
+++ b/Templete tesis doctorado/references.bib
@@ -76,3 +76,15 @@ eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611977141.3},
     abstract = { Abstract We present a graph bisection and partitioning algorithm based on graph neural networks. For each node in the graph, the network outputs probabilities for each of the partitions. The graph neural network consists of two modules: an embedding phase and a partitioning phase. The embedding phase is trained first by minimizing a loss function inspired by spectral graph theory. The partitioning module is trained through a loss function that corresponds to the expected value of the normalized cut. Both parts of the neural network rely on SAGE convolutional layers and graph coarsening using heavy edge matching. The multilevel structure of the neural network is inspired by the multigrid algorithm. Our approach generalizes very well to bigger graphs and has partition quality comparable to METIS, Scotch and spectral partitioning, with shorter runtime compared to METIS and spectral partitioning. }
 }
 
+@inproceedings{xavier,
+  title={Understanding the difficulty of training deep feedforward neural networks},
+  author={Xavier Glorot and Yoshua Bengio},
+  booktitle={AISTATS},
+  year={2010}
+}
+
+@inproceedings{gap1,
+  title={A DEEP LEARNING FRAMEWORK FOR GRAPH PARTITIONING},
+  author={Anna Goldie and Sujith Ravi and Azalia Mirhoseini},
+  year={2019}
+}
