Added information about DeepWalk

--- a/Templete tesis doctorado/references.bib
+++ b/Templete tesis doctorado/references.bib
@@ -88,3 +88,41 @@ eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611977141.3},
   author={Anna Goldie and Sujith Ravi and Azalia Mirhoseini},
   year={2019}
 }
+
+@inproceedings{deepwalk,
+author = {Perozzi, Bryan and Al-Rfou, Rami and Skiena, Steven},
+title = {DeepWalk: Online Learning of Social Representations},
+year = {2014},
+isbn = {9781450329569},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2623330.2623732},
+doi = {10.1145/2623330.2623732},
+abstract = {We present DeepWalk, a novel approach for learning latent representations of vertices in a network. These latent representations encode social relations in a continuous vector space, which is easily exploited by statistical models. DeepWalk generalizes recent advancements in language modeling and unsupervised feature learning (or deep learning) from sequences of words to graphs.DeepWalk uses local information obtained from truncated random walks to learn latent representations by treating walks as the equivalent of sentences. We demonstrate DeepWalk's latent representations on several multi-label network classification tasks for social networks such as BlogCatalog, Flickr, and YouTube. Our results show that DeepWalk outperforms challenging baselines which are allowed a global view of the network, especially in the presence of missing information. DeepWalk's representations can provide F1 scores up to 10% higher than competing methods when labeled data is sparse. In some experiments, DeepWalk's representations are able to outperform all baseline methods while using 60% less training data.DeepWalk is also scalable. It is an online learning algorithm which builds useful incremental results, and is trivially parallelizable. These qualities make it suitable for a broad class of real world applications such as network classification, and anomaly detection.},
+booktitle = {Proceedings of the 20th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+pages = {701–710},
+numpages = {10},
+keywords = {latent representations, deep learning, social networks, network classification, learning with partial labels, online learning},
+location = {New York, New York, USA},
+series = {KDD '14}
+}
+
+@inbook{deepwalk_hyper,
+author = {Yunfang, Chen and Wang, Li and Qi, Dehao and Zhang, Wei},
+year = {2020},
+month = {08},
+pages = {568-583},
+title = {Community Detection Based on DeepWalk in Large Scale Networks},
+isbn = {978-981-15-7529-7},
+doi = {10.1007/978-981-15-7530-3_43}
+}
+  
+@inproceedings{karateclub,
+               title = {{Karate Club: An API Oriented Open-source Python Framework for Unsupervised Learning on Graphs}},
+               author = {Benedek Rozemberczki and Oliver Kiss and Rik Sarkar},
+               year = {2020},
+               pages = {3125–3132},
+               booktitle = {Proceedings of the 29th ACM International Conference on Information and Knowledge Management (CIKM '20)},
+               organization = {ACM},
+}
+
