--- a/Templete tesis doctorado/frontmatter/resumen.tex
+++ b/Templete tesis doctorado/frontmatter/resumen.tex
@@ -3,6 +3,15 @@
 \chapter*{Resumen}
 \addcontentsline{toc}{chapter}{Resumen}
 
-Aqu\'i va el resumen...
+General details:
+1. The complexity behind solving Combinatorial Optimization problems is a very well known 
+2. Balanced graph partitioning is one of the fundamental ones
+3. Why it is a risk
+4. Recent approaches using deep learning capabilities
+
+Article-specific information:
+5. Extension of an existing Deep learning framework
+6. Contributions
+7. Results
 
 \clearpage
