--- a/Templete tesis doctorado/memoirthesis.tex
+++ b/Templete tesis doctorado/memoirthesis.tex
@@ -22,6 +22,8 @@
 \usepackage{calrsfs}
 %\usepackage{fouriernc}
 %
+\parskip=5pt plus 1pt
+
 \OnehalfSpacing 
 \setsecnumdepth{subsection} 
 \maxsecnumdepth{subsubsection}
@@ -160,14 +162,14 @@
 \frontmatter
 \pagenumbering{roman}
 %
-\input{frontmatter/resumen}
-\clearemptydoublepage
+%\input{frontmatter/resumen}
+%\clearemptydoublepage
 %
 \input{frontmatter/abstract}
 \clearemptydoublepage
 %
-\input{frontmatter/acknowledgements}
-\clearemptydoublepage
+%\input{frontmatter/acknowledgements}
+%\clearemptydoublepage
 
 %
 %\renewcommand{\contentsname}{\'Indice}
