--- a/Templete tesis doctorado/references.bib
+++ b/Templete tesis doctorado/references.bib
@@ -126,3 +126,50 @@ doi = {10.1007/978-981-15-7530-3_43}
                organization = {ACM},
 }
 
+@inproceedings{compressgraphs,
+  title={Partition and Code: learning how to compress graphs},
+  author={Giorgos Bouritsas and Andreas Loukas and Nikolaos Karalias and Michael M. Bronstein},
+  booktitle={NeurIPS},
+  year={2021}
+}
+
+@article{deviceplacement,
+  title={Graph Representation Matters in Device Placement},
+  author={Milko Mitropolitsky and Zainab Abbas and Amir H. Payberah},
+  journal={Proceedings of the Workshop on Distributed Infrastructures for Deep Learning},
+  year={2020}
+}
+
+@Article{islanding,
+AUTHOR = {Sun, Zhonglin and Spyridis, Yannis and Lagkas, Thomas and Sesis, Achilleas and Efstathopoulos, Georgios and Sarigiannidis, Panagiotis},
+TITLE = {End-to-End Deep Graph Convolutional Neural Network Approach for Intentional Islanding in Power Systems Considering Load-Generation Balance},
+JOURNAL = {Sensors},
+VOLUME = {21},
+YEAR = {2021},
+NUMBER = {5},
+ARTICLE-NUMBER = {1650},
+URL = {https://www.mdpi.com/1424-8220/21/5/1650},
+PubMedID = {33673514},
+ISSN = {1424-8220},
+ABSTRACT = {Intentional islanding is a corrective procedure that aims to protect the stability of the power system during an emergency, by dividing the grid into several partitions and isolating the elements that would cause cascading failures. This paper proposes a deep learning method to solve the problem of intentional islanding in an end-to-end manner. Two types of loss functions are examined for the graph partitioning task, and a loss function is added on the deep learning model, aiming to minimise the load-generation imbalance in the formed islands. In addition, the proposed solution incorporates a technique for merging the independent buses to their nearest neighbour in case there are isolated buses after the clusterisation, improving the final result in cases of large and complex systems. Several experiments demonstrate that the introduced deep learning method provides effective clustering results for intentional islanding, managing to keep the power imbalance low and creating stable islands. Finally, the proposed method is dynamic, relying on real-time system conditions to calculate the result.},
+DOI = {10.3390/s21051650}
+}
+
+@ARTICLE{imagesegmentation,
+
+  author={Grady, L. and Schwartz, E.L.},
+
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+
+  title={Isoperimetric graph partitioning for image segmentation}, 
+
+  year={2006},
+
+  volume={28},
+
+  number={3},
+
+  pages={469-475},
+
+  doi={10.1109/TPAMI.2006.57}}
+
