--- a/Templete tesis doctorado/memoirthesis.tex
+++ b/Templete tesis doctorado/memoirthesis.tex
@@ -205,9 +205,9 @@
 \import{chapters/conclusiones/}{conclusions.tex}
 \clearemptydoublepage
 %
-\appendix
-\import{chapters/appendices/}{app0A.tex}
-\clearemptydoublepage
+%\appendix
+%\import{chapters/appendices/}{app0A.tex}
+%\clearemptydoublepage
 %
 \backmatter
 %\include{bibliografia}
