--- a/Templete tesis doctorado/references.bib
+++ b/Templete tesis doctorado/references.bib
@@ -173,3 +173,31 @@ DOI = {10.3390/s21051650}
 
   doi={10.1109/TPAMI.2006.57}}
 
+@article{gnnsurvey,
+author = {Zhang, Ziwei and Cui, Peng and Zhu, Wenwu},
+year = {2020},
+month = {03},
+pages = {1-1},
+title = {Deep Learning on Graphs: A Survey},
+volume = {PP},
+journal = {IEEE Transactions on Knowledge and Data Engineering},
+doi = {10.1109/TKDE.2020.2981333}
+}
+
+@article{gcnreview,
+author = {Zhang, Si and Tong, Hanghang and Xu, Jiejun and Maciejewski, Ross},
+year = {2019},
+month = {11},
+pages = {},
+title = {Graph convolutional networks: a comprehensive review},
+volume = {6},
+journal = {Computational Social Networks},
+doi = {10.1186/s40649-019-0069-y}
+}
+
+@article{gcn,
+  title={Semi-Supervised Classification with Graph Convolutional Networks},
+  author={Kipf, Thomas N and Welling, Max},
+  journal={arXiv preprint arXiv:1609.02907},
+  year={2016}
+}
