--- a/Templete tesis doctorado/frontmatter/abstract.tex
+++ b/Templete tesis doctorado/frontmatter/abstract.tex
@@ -4,13 +4,13 @@
 \addcontentsline{toc}{chapter}{Abstract}
 
 %\begin{SingleSpace}
-\initial{T}he design of algorithms that solve Combinatorial Optimization problems is a challenging task due to their intractable nature. One of the fundamental and most studied problem in the area is the Graph Partitioning problem. In recent years, several Deep Learning strategies have shown to be successful when dealing with this problem. One of the famous ones is the Generalizable Approximate Partitioning (GAP) framework. The present work is aimed to present an extension to this framework that works for non-attributed graphs and generalizes well to large ones.
+\initial{T}he design of algorithms that solve Combinatorial Optimization problems is a challenging task due to their intractable nature. One of the fundamental and most studied problem in the area is the Graph Partitioning problem. In recent years, several Deep Learning strategies have been developed to deal with this and other Combinatorial Optimization problems, which have successfully shown satisfactory results. One of the famous ones is the Generalizable Approximate Partitioning (GAP) framework. This work aims to present an extension of this framework that works for more general graphs and generalizes well to large ones.
 
-One of the first observations made by the authors of this work is that in GAP framework they used an architecture based on Graph Convolutional Networks (GCN) which tends to be slow for big graphs. Here, they are presented significant modifications, still inspired on GCN, that reduce the computation time.
+One of the first observations made in this research is that the GAP framework uses an architecture based on Graph Convolutional Networks (GCN's) which tends to be slow for big graphs. Therefore, significant modifications were carried out to reduce the computation time without losing the power of the original framework and at the same time preserve the advantages that Graph Neural Networks have.
 
-In addition, it was noted that GAP requires graphs with node features due to the model architecture chosen by its authors. That dependency was eliminated used a random walk approach to generate node features. This was an important modification because the algorithm now relies purely on the graph's structure which is Graph Partitioning problem.
+In addition, it was noted that GAP requires graphs with node features due to the model architecture chosen by its authors. That dependency was eliminated by using a random walk approach to generate node features. This was an important modification because the algorithm now relies purely on the graph's structure which is enough for the Graph Partitioning Problem.
 
-In the last part of the written, it is shown how to use a negative sampling technique to accelerate the process of finding balanced partitions without sacrificing the quality of those partitions. The proposed algorithm shows results comparable with widely used partitioning algorithms like METIS.
-
+The last part of this research shows how to use a negative sampling technique to accelerate and improve the process of finding balanced partitions without sacrificing the quality of said partitions. The proposed algorithm shows results comparable with widely used partitioning algorithms like METIS or SCOTCH.
+%\end{SingleSpace}
 
 \clearpage
