--- a/Templete tesis doctorado/memoirthesis.tex
+++ b/Templete tesis doctorado/memoirthesis.tex
@@ -1,4 +1,3 @@
-
 \RequirePackage[l2tabu]{nag}		
 \documentclass[a4paper,12pt,openbib]{memoir}
 \usepackage{datetime}
@@ -22,8 +21,8 @@
 \usepackage{calrsfs}
 %\usepackage{fouriernc}
 %
-\parskip=5pt plus 1pt
-
+\parskip=3pt 
+%\setlength{\parskip}{0.08cm} 
 \OnehalfSpacing 
 \setsecnumdepth{subsection} 
 \maxsecnumdepth{subsubsection}
