--- a/Templete tesis doctorado/references.bib
+++ b/Templete tesis doctorado/references.bib
@@ -45,7 +45,6 @@
     isbn = {9781510860964},
     publisher = {Curran Associates Inc.},
     address = {Red Hook, NY, USA},
-    abstract = {Low-dimensional embeddings of nodes in large graphs have proved extremely useful in a variety of prediction tasks, from content recommendation to identifying protein functions. However, most existing approaches require that all nodes in the graph are present during training of the embeddings; these previous approaches are inherently transductive and do not naturally generalize to unseen nodes. Here we present GraphSAGE, a general inductive framework that leverages node feature information (e.g., text attributes) to efficiently generate node embeddings for previously unseen data. Instead of training individual embeddings for each node, we learn a function that generates embeddings by sampling and aggregating features from a node's local neighborhood. Our algorithm outperforms strong baselines on three inductive node-classification benchmarks: we classify the category of unseen nodes in evolving information graphs based on citation and Reddit post data, and we show that our algorithm generalizes to completely unseen graphs using a multi-graph dataset of protein-protein interactions.},
     booktitle = {Proceedings of the 31st International Conference on Neural Information Processing Systems},
     pages = {1025–1035},
     numpages = {11},
@@ -200,4 +199,40 @@ doi = {10.1186/s40649-019-0069-y}
   author={Kipf, Thomas N and Welling, Max},
   journal={arXiv preprint arXiv:1609.02907},
   year={2016}
+}
+
+@article{nodefeatures,
+  author    = {Chen Wang and
+               Yingtong Dou and
+               Min Chen and
+               Jia Chen and
+               Zhiwei Liu and
+               Philip S. Yu},
+  title     = {Deep Fraud Detection on Non-attributed Graph},
+  journal   = {CoRR},
+  volume    = {abs/2110.01171},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2110.01171},
+  eprinttype = {arXiv},
+  eprint    = {2110.01171},
+  timestamp = {Fri, 08 Oct 2021 15:47:55 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2110-01171.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Book{appcombinatorial,
+  author={J. MacGregor Smith},
+  title={{Combinatorial, Linear, Integer and Nonlinear Optimization Apps}},
+  publisher={Springer},
+  year=2021,
+  month={June},
+  volume={},
+  number={978-3-030-75801-1},
+  series={Springer Optimization and Its Applications},
+  edition={},
+  keywords={},
+  doi={10.1007/978-3-030-75801-1},
+  isbn={ARRAY(0x18997758)},
+  abstract={No abstract is available for this item.},
+  url={https://ideas.repec.org/b/spr/spopap/978-3-030-75801-1.html}
 }
