Added some references for introduction

--- a/Templete tesis doctorado/frontmatter/resumen.tex
+++ b/Templete tesis doctorado/frontmatter/resumen.tex
@@ -3,13 +3,12 @@
 \chapter*{Resumen}
 \addcontentsline{toc}{chapter}{Resumen}
 
-El diseño de algoritmos para resolver problemas de Optimización Combinatoria es una tarea desafiante debido a la naturaleza de intractabilidad que poseen los mismos. Uno de los problemas fundamentales, y tmabién uno de los más estudiados en el área, es el problema del \textit{Particionado de Grafos}. En años recientes, se han desarrollado distintas estrategias basadas en Deep Learning para lidiar con éste y otros problemas en Optimización Combinatoria, los cuales éxitosamente han mostrado resultados satisfactorios. Una de las más famosas estrategias antes mencionadas es \textit{Generalizable Approximate Partitioning (GAP) framework}. El objetivo de este trabajo es presentar una extensión de este \textit{framework} que funcione para grafos más generales y que funcione para grafos mas generales, i.e. grafos sin atributos, y generalice bien para grafos más grandes.  
+El diseño de algoritmos para resolver problemas de Optimización Combinatoria es una tarea desafiante debido a la naturaleza de intractabilidad que poseen los mismos. Uno de los problemas fundamentales, y también uno de los más estudiados en el área, es el problema del \textit{Particionado de Grafos}. En años recientes, se han desarrollado distintos algoritmos basados en Deep Learning para lidiar con éste y otros problemas de Optimización Combinatoria, los cuales han mostrado resultados satisfactorios. Uno de las algoritmos más famosos, entre los antes mencionados, es \textit{Generalizable Approximate Partitioning (GAP) framework}. El objetivo de este trabajo es presentar una extensión de este \textit{framework} que funcione para grafos mas generales, i.e. grafos sin atributos, y generalice bien para grafos grandes.  
 
-Una de las primeras observaciones hechas en esta investigación es que debido al hecho que el framework GAP usa una arquitectura basada en \textit{Graph Convolutional Networks}, éste tiende a desempeñarse lentamente para grafos grandes. Por lo tanto, se llevaron a cabo significantes modificaciones para reducir el tiempo de cómputo sin perder la potencia del framework original y al mismo tiempo mantener las ventajas que ofrecen las Graph Convolutional Networks.
+Una de las primeras observaciones hechas en esta investigación es que debido al hecho que el framework GAP usa una arquitectura basada en \textit{Graph Convolutional Networks}, éste tiende a desempeñarse lentamente en grafos grandes. Por lo tanto, se llevaron a cabo algunas modificaciones significantes que mantienen las ventajas que ofrecen las Graph Convolutional Networks y al mismo tiempo reducen el tiempo de cómputo sin perder la potencia del framework original.
 
-Además, se observó que el framework GAP depende de grafos con características en sus nodos debido a la arquitectura seleccionada por sus autores. Esta dependencia fue elmininada a través de un enfoque basado en caminatas aleatorias para generar las características de los nodos. Esta se puede considerar como una modificación importante porque el algoritmo ahora depende únicamente de la estructura del grafo lo cuál es suficiente para 
-In addition, it was noted that GAP requires graphs with node features due to the model architecture chosen by its authors. That dependency was eliminated by using a random walk approach to generate node features. This was an important modification because the algorithm now relies purely on the graph's structure which is enough for the Graph Partitioning Problem.
+Además, se observó que el framework GAP funciona únicamente con grafos con características en sus nodos como consecuencia de la arquitectura seleccionada por sus autores. Esta dependencia fue elmininada a través de un enfoque basado en caminatas aleatorias para generar las características de los nodos. Esta se puede considerar como una modificación importante porque el algoritmo ahora depende únicamente de la estructura del grafo lo cuál es suficiente para el problema del Particionado de Grafos.
 
-The last part of this research shows how to use a negative sampling technique to accelerate and improve the process of finding balanced partitions without sacrificing the quality of said partitions. The proposed algorithm shows results comparable with widely used partitioning algorithms like METIS or SCOTCH.
+La última parte de esta investigación muestra cómo se adaptó una técnica de \textit{negative sampling} al algoritmo propuesto para acelerar y hacer más efectivo el proceso de encontrar particiones balanceadas sin sacrificar la calidad de las particiones antes mencionadas. El algoritmo propuesto mostró resultados comparables con algoritmos ampliamente usados para el particionado de grafos como lo son METIS o SCOTCH.
 
 %\clearpage
