--- a/Templete tesis doctorado/memoirthesis.tex
+++ b/Templete tesis doctorado/memoirthesis.tex
@@ -1,5 +1,6 @@
 \RequirePackage[l2tabu]{nag}		
 \documentclass[a4paper,12pt,openbib]{memoir}
+\usepackage{geometry}
 \usepackage{datetime}
 \usepackage{ifpdf}
 \ifpdf
@@ -77,7 +78,8 @@
 \usepackage{newlfont}					
 \usepackage{layouts}					
 \usepackage{graphicx}					
-\usepackage{longtable,rotating}			 	
+\usepackage{longtable,rotating}	
+\usepackage{multicol}		 	
 \usepackage{colortbl}					
 \usepackage{wasysym}					
 \usepackage{mathrsfs}					
@@ -158,11 +160,15 @@
 %\renewcommand{\appendixname}{Ap\'endice}
 %\renewcommand{\bibname}{Referencias}
 % 
+%
+\input{frontmatter/titlepage}
+\clearemptydoublepage
+
 \frontmatter
 \pagenumbering{roman}
 %
-%\input{frontmatter/resumen}
-%\clearemptydoublepage
+\input{frontmatter/resumen}
+\clearemptydoublepage
 %
 \input{frontmatter/abstract}
 \clearemptydoublepage
