--- a/Templete tesis doctorado/references.bib
+++ b/Templete tesis doctorado/references.bib
@@ -5,7 +5,8 @@
     volume={14},
     number={3},
     pages={1-159},
-    publisher={Morgan and Claypool}
+    publisher={Morgan and Claypool},
+    year={2020}
 }
 
 @inbook{gatti,
@@ -17,7 +18,8 @@
     doi = {10.1137/1.9781611977141.3},
     URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611977141.3},
     eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611977141.3},
-        abstract = { Abstract We present a graph bisection and partitioning algorithm based on graph neural networks. For each node in the graph, the network outputs probabilities for each of the partitions. The graph neural network consists of two modules: an embedding phase and a partitioning phase. The embedding phase is trained first by minimizing a loss function inspired by spectral graph theory. The partitioning module is trained through a loss function that corresponds to the expected value of the normalized cut. Both parts of the neural network rely on SAGE convolutional layers and graph coarsening using heavy edge matching. The multilevel structure of the neural network is inspired by the multigrid algorithm. Our approach generalizes very well to bigger graphs and has partition quality comparable to METIS, Scotch and spectral partitioning, with shorter runtime compared to METIS and spectral partitioning. }
+        abstract = { Abstract We present a graph bisection and partitioning algorithm based on graph neural networks. For each node in the graph, the network outputs probabilities for each of the partitions. The graph neural network consists of two modules: an embedding phase and a partitioning phase. The embedding phase is trained first by minimizing a loss function inspired by spectral graph theory. The partitioning module is trained through a loss function that corresponds to the expected value of the normalized cut. Both parts of the neural network rely on SAGE convolutional layers and graph coarsening using heavy edge matching. The multilevel structure of the neural network is inspired by the multigrid algorithm. Our approach generalizes very well to bigger graphs and has partition quality comparable to METIS, Scotch and spectral partitioning, with shorter runtime compared to METIS and spectral partitioning. },
+    year={2022}
 }
 
 @article{gap,
@@ -72,7 +74,8 @@ pages = {25-36},
 doi = {10.1137/1.9781611977141.3},
 URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611977141.3},
 eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611977141.3},
-    abstract = { Abstract We present a graph bisection and partitioning algorithm based on graph neural networks. For each node in the graph, the network outputs probabilities for each of the partitions. The graph neural network consists of two modules: an embedding phase and a partitioning phase. The embedding phase is trained first by minimizing a loss function inspired by spectral graph theory. The partitioning module is trained through a loss function that corresponds to the expected value of the normalized cut. Both parts of the neural network rely on SAGE convolutional layers and graph coarsening using heavy edge matching. The multilevel structure of the neural network is inspired by the multigrid algorithm. Our approach generalizes very well to bigger graphs and has partition quality comparable to METIS, Scotch and spectral partitioning, with shorter runtime compared to METIS and spectral partitioning. }
+    abstract = { Abstract We present a graph bisection and partitioning algorithm based on graph neural networks. For each node in the graph, the network outputs probabilities for each of the partitions. The graph neural network consists of two modules: an embedding phase and a partitioning phase. The embedding phase is trained first by minimizing a loss function inspired by spectral graph theory. The partitioning module is trained through a loss function that corresponds to the expected value of the normalized cut. Both parts of the neural network rely on SAGE convolutional layers and graph coarsening using heavy edge matching. The multilevel structure of the neural network is inspired by the multigrid algorithm. Our approach generalizes very well to bigger graphs and has partition quality comparable to METIS, Scotch and spectral partitioning, with shorter runtime compared to METIS and spectral partitioning. },
+    year={2022}
 }
 
 @inproceedings{xavier,
@@ -85,6 +88,7 @@ eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611977141.3},
 @inproceedings{gap1,
   title={A DEEP LEARNING FRAMEWORK FOR GRAPH PARTITIONING},
   author={Anna Goldie and Sujith Ravi and Azalia Mirhoseini},
+  journal={Published as a conference paper at ICLR 2019},
   year={2019}
 }
 
@@ -113,7 +117,9 @@ month = {08},
 pages = {568-583},
 title = {Community Detection Based on DeepWalk in Large Scale Networks},
 isbn = {978-981-15-7529-7},
-doi = {10.1007/978-981-15-7530-3_43}
+doi = {10.1007/978-981-15-7530-3_43},
+booktitle={Communications in Computer and Information Science },
+publisher = {Springer Publishing Company, Incorporated}
 }
   
 @inproceedings{karateclub,
@@ -221,18 +227,15 @@ doi = {10.1186/s40649-019-0069-y}
 }
 
 @Book{appcombinatorial,
-  author={J. MacGregor Smith},
-  title={{Combinatorial, Linear, Integer and Nonlinear Optimization Apps}},
-  publisher={Springer},
-  year=2021,
-  month={June},
-  volume={},
-  number={978-3-030-75801-1},
-  series={Springer Optimization and Its Applications},
-  edition={},
-  keywords={},
-  doi={10.1007/978-3-030-75801-1},
-  isbn={ARRAY(0x18997758)},
-  abstract={No abstract is available for this item.},
-  url={https://ideas.repec.org/b/spr/spopap/978-3-030-75801-1.html}
+author = {Korte, Bernhard and Vygen, Jens},
+title = {Combinatorial Optimization: Theory and Algorithms},
+year = {2012},
+isbn = {3642244874},
+publisher = {Springer Publishing Company, Incorporated},
+edition = {5th},
+abstract = {This comprehensive textbook on combinatorial optimization places specialemphasis on theoretical results and algorithms with provably goodperformance, in contrast to heuristics. It is based on numerous courses on combinatorial optimization and specialized topics, mostly at graduate level. This book reviews the fundamentals, covers the classical topics (paths, flows, matching, matroids, NP-completeness, approximation algorithms) in detail, and proceeds to advanced and recent topics, some of which have not appeared in a textbook before. Throughout,it contains complete but concise proofs, and also provides numerousexercises and references. This fifth edition has again been updated, revised, and significantlyextended, with more than 60 new exercises and new material on varioustopics, including Cayley's formula, blocking flows, fasterb-matching separation, multidimensional knapsack, multicommoditymax-flow min-cut ratio, and sparsest cut. Thus, this book represents the state of the art of combinatorial optimization.}
 }
+
+@misc{brilliant, title={Combinatorial optimization}, url={https://brilliant.org/wiki/combinatorial-optimization/}, howpublished = {\url{https://brilliant.org/wiki/combinatorial-optimization/}}, journal={Brilliant Math and Science Wiki}, author={Henry Maltby and Eli Ross }, year = {2022} }
+
+@phdthesis{fernandes, title={Algorithms and Models For Combinatorial Optimization Problems}, author={Fernandes, Albert Einstein Muritiba}, year={2010}} 
