Added images for test graphs

--- a/Templete tesis doctorado/memoirthesis.tex
+++ b/Templete tesis doctorado/memoirthesis.tex
@@ -105,7 +105,9 @@
 \usepackage{rotfloat}					
 \usepackage{alltt}						
 \usepackage[version=0.96]{pgf}			
-\usepackage{tikz}						
+\usepackage{tikz}
+\usepackage{caption}
+\usepackage{subcaption}					
 \usetikzlibrary{arrows,shapes,snakes,
 		       automata,backgrounds,
 		       petri,topaths}				
